--- a/Todo_MVVM_2/Detail/Detail.storyboard
+++ b/Todo_MVVM_2/Detail/Detail.storyboard
@@ -11,7 +11,7 @@
         <!--Detail View Controller-->
         <scene sceneID="2dS-W2-qgV">
             <objects>
-                <viewController storyboardIdentifier="DetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8M5-rE-mda" customClass="DetailViewController" customModule="Todo_MVVM" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8M5-rE-mda" customClass="DetailViewController" customModule="Todo_MVVM_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kSn-gf-lmg">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
