--- a/Todo_MVVM_2/Detail/Detail.storyboard
+++ b/Todo_MVVM_2/Detail/Detail.storyboard
@@ -54,6 +54,12 @@
                         <viewLayoutGuide key="safeArea" id="wee-3L-x9m"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="deleteButton" destination="vXM-Ol-6lM" id="Z3M-xt-PHT"/>
+                        <outlet property="memoTextView" destination="Gz1-g2-MFs" id="Jy6-jE-4Ek"/>
+                        <outlet property="titleTextField" destination="hJ9-8Z-WBN" id="MUo-Wp-DVE"/>
+                        <outlet property="updateButton" destination="qpg-JC-Xzh" id="vzp-YP-hSJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ArL-pg-Bxe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
